--- a/style.scss
+++ b/style.scss
@@ -237,24 +237,6 @@ h3 {
     transform: translateY(-12px) rotate(45deg);
   }
   
-//   .nav {
-//     position: fixed;
-//     top: 3rem;
-//     left: 0;
-//     right: 0;
-//     bottom: 0;
-//     padding: 1rem;
-//     opacity: 0;
-//     visibility: hidden;
-//     transition: opacity .5s, visibility .5s;
-//   }
-
-//   .nav.show {
-//     opacity: 1;
-//     visibility: visible;
-//   }
-  
-
 /* ===================================
 # hero
 =================================== */
@@ -316,6 +298,15 @@ h3 {
         @include mixin.sm{
             font-size: 38px;
         }
+    }
+
+    .price {
+        display: block;
+        margin-top: 10px;
+        margin-bottom: -30px;
+        color: $primary-color;
+        font-weight: bold;
+        font-size: 24px;
     }
 }
 
