--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,14 @@ h3 {
     font-size: 38px;
   }
 }
+.hero .price {
+  display: block;
+  margin-top: 10px;
+  margin-bottom: -30px;
+  color: #5364FF;
+  font-weight: bold;
+  font-size: 24px;
+}
 
 /* ===================================
 # features
